--- a/index.html
+++ b/index.html
@@ -2,4 +2,49 @@
 layout: default
 ---
 
-BINGO!
+<style type="text/css">
+  .is-new:before {
+    content: 'NEW';
+    color: red;
+  }
+
+  .hidden {
+    display: none;
+  }
+</style>
+
+
+<ul class="numbers js-numbers">
+</ul>
+
+
+<script type="text/javascript">
+  numbers = "{% for number in site.data.numbers %}{{ number[0] }},{% endfor%}"
+  var list = document.querySelector('.js-numbers')
+  var memorizedList = localStorage.getItem('numbers') ? localStorage.getItem('numbers').split(',') : []
+  var currentNumbers = numbers.split(',').filter(function (no) { return !!no })
+  var newNumbers = []
+
+  currentNumbers.forEach(function(no) {
+    if(memorizedList.indexOf(no) < 0) {
+      newNumbers.push(no)
+      memorizedList.push(no)
+    }
+  })
+
+  localStorage.setItem('numbers', memorizedList)
+
+  memorizedList.reverse().forEach(function (no) {
+    if(no === 'null') return
+    var li = document.createElement('li')
+    li.innerText = no
+    if(newNumbers.indexOf(no) >= 0) {
+      li.classList.add('is-new')
+    }
+    list.appendChild(li)
+  })
+
+  setTimeout(function () {
+    window.location.reload()
+  }, 10000)
+</script>
