--- a/index.html
+++ b/index.html
@@ -2,23 +2,12 @@
 layout: default
 ---
 
-<style type="text/css">
-  .is-new:before {
-    content: 'NEW';
-    color: red;
-  }
+<div class="wrapper">
+  <a href="/board.html">Set up your a bingo board</a>
 
-  .hidden {
-    display: none;
-  }
-</style>
-
-
-<a href="/board.html">Set up your a bingo board</a>
-
-<ul class="numbers js-numbers">
-</ul>
-
+  <ul class="numbers js-numbers">
+  </ul>
+</div>
 
 <script type="text/javascript">
   numbers = "{% for number in site.data.numbers %}{{ number[0] }},{% endfor%}"
