--- a/board.html
+++ b/board.html
@@ -2,49 +2,47 @@
 layout: default
 ---
 
-<div class="wrapper">
-  <div class="board">
-    <h1>Pull Request Bingo!</h1>
-    <div class="populate-options">
-      <p>Populate your board with numbers from a range:</p>
-      <button id="one-hundred-btn">100</button>
-      <button id="fifty-btn">50</button>
-    </div>
-    <div class="row">
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-    </div>
-    <div class="row">
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-    </div>
-    <div class="row">
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-    </div>
-    <div class="row">
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-    </div>
-    <div class="row">
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-      <span class="square"></span>
-    </div>
+<div class="board">
+  <h1>Bingo Board</h1>
+  <div class="populate-options">
+    <p class="instructions">Populate your board with numbers from a range:</p>
+    <button id="one-hundred-btn">100</button>
+    <button id="fifty-btn">50</button>
+  </div>
+  <div class="row">
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+  </div>
+  <div class="row">
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+  </div>
+  <div class="row">
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+  </div>
+  <div class="row">
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+  </div>
+  <div class="row">
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
+    <span class="square"></span>
   </div>
 </div>
 
@@ -75,6 +73,8 @@ layout: default
 
   // Populate squares
   function populateBoard (max) {
+    // Clear any previously selected squares
+    clearSelections(squares)
     var usedNumbers = []
     Array.prototype.forEach.call(squares, function (square) {
       var number = getRandomNumber(max)
@@ -96,5 +96,13 @@ layout: default
 
   function getRandomNumber (max) {
     return Math.round(Math.random() * max)
+  }
+
+  function clearSelections (squares) {
+    Array.prototype.forEach.call(squares, function (square) {
+      if (square.classList.contains("selected")) {
+        square.classList.remove("selected")
+      }
+    })
   }
 </script>
