--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 layout: default
 ---
 
-<a href="/board.html">Set up your a bingo board</a>
+<div class="header">
+  <h1>Pull Request Bingo!</h1>
+  <p>
+    <a class="btn" href="/board.html">Set up your a bingo board</a>
+  </p>
+</div>
+
 <ul class="numbers js-numbers">
 </ul>
 
