--- a/board.html
+++ b/board.html
@@ -4,11 +4,10 @@ layout: default
 
 <div class="board">
   <h1>Bingo Board</h1>
-  <div class="populate-options">
-    <p class="instructions">Populate your board with numbers from a range:</p>
-    <button id="one-hundred-btn">100</button>
-    <button id="fifty-btn">50</button>
-  </div>
+  <p class="instructions">Populate your board with numbers from a range:</p>
+  <button class="btn" id="one-hundred-btn">100</button>
+  <button class="btn" id="fifty-btn">50</button>
+  
   <div class="row">
     <span class="square"></span>
     <span class="square"></span>
