--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ script: numbers.js
 <div class="header">
   <h1>Pull Request Bingo!</h1>
   <p>
-    <a class="btn" href="board.html">Set up your a bingo board</a>
+    <a class="btn" href="board.html">Set up your bingo board</a>
   </p>
 </div>
 
